# cec_comparator

./: .clang-format  .gitignore  CMakeLists.txt  main.c  run.sh
src/: basic_funcs.c
